--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   youtube_player_flutter: ^9.1.3
   sensors_plus: ^7.0.0
   flutter_gen: ^5.12.0
+  shared_preferences: ^2.5.4
 
 
 dev_dependencies:
